5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1593_820.log
== TEST (2019-04-01 16:11:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_Rs50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = resto_Rs50 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_Rs50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:13:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_Rs50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = resto_Rs50 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_Rs50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:13:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= float(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_Rs50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = resto_Rs50 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_Rs50
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:13:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= float(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notasRs50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = resto_Rs50 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notasRs50
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:14:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notasRs50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = resto_Rs50 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notasRs50
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:17:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_Rs50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = notas_Rs10 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_Rs50
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:17:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_Rs50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = notas_Rs10 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_Rs50
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:18:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_Rs50 = valor//2

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = notas_Rs10 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    notas_Rs50 = valor//2
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:18:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_Rs50 = (valor//2)

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = notas_Rs10 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    notas_Rs50 = (valor//2)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:19:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notasRs50=(valor//2)

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = notas_Rs10 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
File "XXXX", line 8
    notasRs50=(valor//2)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:23:19) 
-- CODE:
valor= int(input("qual valor a ser sacado? "))

cqnt= valor//50
restocqnt=valor%50

dez= restocqnt//10
restodez= restocqnt%10

dois= restodez/2

print(cqnt,dez,dois)
-- OUTPUT:
40 2 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:23:32) 
-- CODE:
valor= int(input("qual valor a ser sacado? "))

cqnt= valor//50
restocqnt=valor%50

dez= restocqnt//10
restodez= restocqnt%10

dois= restodez/2

print(cqnt,dez,dois)
-- EXECUTION TIME:
0.127144
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40 2 4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:23:40) 
-- CODE:
valor= int(input("qual valor a ser sacado? "))

cqnt= valor//50
restocqnt=valor%50

dez= restocqnt//10
restodez= restocqnt%10

dois= restodez//2

print(cqnt,dez,dois)
-- EXECUTION TIME:
0.144195
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40 2 4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
